// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion basic usage should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div>
        <mock-styled.a>
          <mock-styled.div>
            Accordion Item 1
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name carSolidSystem"
                />
              </mock-styled.span>
              2
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name usernameSolidSystem"
                />
              </mock-styled.span>
              5
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
              >
                <svg
                  role="img"
                  title="Icon image with name upSystem"
                />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.a>
        <mock-styled.div
          classname="mock-css."
        >
          Accordion Content 1
        </mock-styled.div>
        <mock-styled.a>
          <mock-styled.div>
            Accordion Item 2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name carSolidSystem"
                />
              </mock-styled.span>
              2
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name usernameSolidSystem"
                />
              </mock-styled.span>
              5
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
              >
                <svg
                  role="img"
                  title="Icon image with name downSystem"
                />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.a>
        <mock-styled.div>
          Accordion Content 2
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div>
      <mock-styled.a>
        <mock-styled.div>
          Accordion Item 1
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name carSolidSystem"
              />
            </mock-styled.span>
            2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name usernameSolidSystem"
              />
            </mock-styled.span>
            5
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname=""
            >
              <svg
                role="img"
                title="Icon image with name upSystem"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.a>
      <mock-styled.div
        classname="mock-css."
      >
        Accordion Content 1
      </mock-styled.div>
      <mock-styled.a>
        <mock-styled.div>
          Accordion Item 2
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name carSolidSystem"
              />
            </mock-styled.span>
            2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name usernameSolidSystem"
              />
            </mock-styled.span>
            5
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname=""
            >
              <svg
                role="img"
                title="Icon image with name downSystem"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.a>
      <mock-styled.div>
        Accordion Content 2
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion react shorthand should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div>
        <mock-styled.a
          aria-controls=":r0:-0"
          aria-label="Accordion item, hit return to expand content"
          id=":r1:-0"
          role="button"
          tabindex="0"
        >
          <mock-styled.div>
            Accordion Item 1
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name carSolidSystem"
                />
              </mock-styled.span>
              2
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name usernameSolidSystem"
                />
              </mock-styled.span>
              5
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
                style="font-size: 1.25rem;"
              >
                <svg
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name chevronDown"
                />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.a>
        <mock-styled.div
          aria-expanded="false"
          aria-labelledby=":r1:-0"
          classname=""
          id=":r0:-0"
          role="region"
        >
          Accordion Content 1
        </mock-styled.div>
        <mock-styled.a
          aria-controls=":r0:-1"
          aria-label="Accordion item, hit return to expand content"
          id=":r1:-1"
          role="button"
          tabindex="0"
        >
          <mock-styled.div>
            Accordion Item 2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name carSolidSystem"
                />
              </mock-styled.span>
              2
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css.
  margin-right: var(--util-rems-1);
"
              >
                <svg
                  role="img"
                  title="Icon image with name usernameSolidSystem"
                />
              </mock-styled.span>
              5
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
                style="font-size: 1.25rem;"
              >
                <svg
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name chevronDown"
                />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.a>
        <mock-styled.div
          aria-expanded="false"
          aria-labelledby=":r1:-1"
          classname=""
          id=":r0:-1"
          role="region"
        >
          Accordion Content 2
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div>
      <mock-styled.a
        aria-controls=":r0:-0"
        aria-label="Accordion item, hit return to expand content"
        id=":r1:-0"
        role="button"
        tabindex="0"
      >
        <mock-styled.div>
          Accordion Item 1
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name carSolidSystem"
              />
            </mock-styled.span>
            2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name usernameSolidSystem"
              />
            </mock-styled.span>
            5
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              style="font-size: 1.25rem;"
            >
              <svg
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name chevronDown"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.a>
      <mock-styled.div
        aria-expanded="false"
        aria-labelledby=":r1:-0"
        classname=""
        id=":r0:-0"
        role="region"
      >
        Accordion Content 1
      </mock-styled.div>
      <mock-styled.a
        aria-controls=":r0:-1"
        aria-label="Accordion item, hit return to expand content"
        id=":r1:-1"
        role="button"
        tabindex="0"
      >
        <mock-styled.div>
          Accordion Item 2
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name carSolidSystem"
              />
            </mock-styled.span>
            2
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css.
  margin-right: var(--util-rems-1);
"
            >
              <svg
                role="img"
                title="Icon image with name usernameSolidSystem"
              />
            </mock-styled.span>
            5
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem !important;
"
              style="font-size: 1.25rem;"
            >
              <svg
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name chevronDown"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.a>
      <mock-styled.div
        aria-expanded="false"
        aria-labelledby=":r1:-1"
        classname=""
        id=":r0:-1"
        role="region"
      >
        Accordion Content 2
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
